--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,3 +44,5 @@ play.i18n.langs = ["en"]
 # play.evolutions.db.default.enabled=false
 
 play.modules.enabled += "Module"
+
+include "securesocial.conf"
