--- a/conf/application.conf
+++ b/conf/application.conf
@@ -45,4 +45,31 @@ play.i18n.langs = ["en"]
 
 play.modules.enabled += "Module"
 
+play.filters {
+  # CORS filter configuration
+  cors {
+
+    # The path prefixes to filter.
+    pathPrefixes = ["/"]
+
+    # The allowed origins. If null, all origins are allowed.
+    allowedOrigins = ["http://127.0.0.1:8081"]
+
+    # The allowed HTTP methods. If null, all methods are allowed
+    allowedHttpMethods = null
+
+    # The allowed HTTP headers. If null, all headers are allowed.
+    allowedHttpHeaders = null
+
+    # The exposed headers
+    exposedHeaders = []
+
+    # Whether to support credentials
+    supportsCredentials = true
+
+    # The maximum amount of time the CORS meta data should be cached by the client
+    preflightMaxAge = 1 hour
+  }
+}
+
 include "securesocial.conf"
